bird模拟路由器连通测试通过

--- a/test/bird2.conf
+++ b/test/bird2.conf
@@ -1,7 +1,7 @@
 debug protocols all;
 
 protocol kernel {
-	persist no;                # Don't remove routes on BIRD shutdown
+	persist;                # Don't remove routes on BIRD shutdown
 	learn;
 	ipv4 {
 		export all;     # Default is export none
@@ -12,9 +12,9 @@ protocol device {
 }
 
 protocol static {
-	ipv4 { };
-	route 192.168.3.0/24 via "veth-2l";
-	route 192.168.4.0/24 via "veth-2r";
+    ipv4 { };
+    route 192.168.3.0/24 via "veth-2l";
+    route 192.168.4.0/24 via "veth-2r";
 }
 
 protocol rip {
