--- a/test/bird1.conf
+++ b/test/bird1.conf
@@ -1,7 +1,7 @@
 debug protocols all;
 
 protocol kernel {
-	persist no;                # Don't remove routes on BIRD shutdown
+	persist ;                # Don't remove routes on BIRD shutdown
 	learn;
 	ipv4 {
 		export all;     # Default is export none
@@ -9,6 +9,11 @@ protocol kernel {
 }
 
 protocol device {
+}
+
+protocol static {
+    ipv4 { };
+    route 192.168.3.0/24 via "veth-1r";
 }
 
 protocol rip {
