--- a/test/bird3.conf
+++ b/test/bird3.conf
@@ -1,11 +1,16 @@
 debug protocols all;
 
 protocol kernel {
-	persist no;                # Don't remove routes on BIRD shutdown
+	persist;                # Don't remove routes on BIRD shutdown
 	learn;
 	ipv4 {
 		export all;     # Default is export none
 	};
+}
+
+protocol static {
+    ipv4 { };
+    route 192.168.4.0/24 via "veth-3l";
 }
 
 protocol device {
